force-app/main/default/objects/Fuzzy_Logic_Setting__c/Fuzzy_Logic_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Fuzzy Logic Setting</label>
</CustomObject>