force-app/main/default/objects/Fuzzy_Logic_Setting__c/fields/Distributor_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Salesforce_ID__c</fullName>
    <label>Distributor Salesforce ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>