force-app/main/default/objects/Fuzzy_Logic_Setting__c/fields/Fuzzy_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Fuzzy_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuzzy Enabled</label>
    <type>Checkbox</type>
</CustomField>