force-app/main/default/objects/Fuzzy_Logic_Setting__c/fields/Fuzzy_logic_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fuzzy_logic_Limit__c</fullName>
    <label>Fuzzy logic Limit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>